--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-haptic-feedback": "^2.2.0",
+    "react-native-snackbar": "^2.6.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
