--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-native-vector-icons": "^6.4.16",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-heroicons": "^3.2.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-svg": "^13.14.0",
+    "react-native-vector-icons": "^10.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
