--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "@types/react-native-vector-icons": "^6.4.16",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -17,6 +19,8 @@
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.1",
