--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@types/react-native-vector-icons": "^6.4.16",
@@ -17,8 +18,10 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
