--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react-native-vector-icons": "^6.4.16",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -22,11 +25,13 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-reanimated": "^3.5.4",
+    "react-native-redash": "^18.1.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.1",
+    "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
