--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
