--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.11.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-redash": "^18.1.1",
     "react-native-safe-area-context": "^4.7.4",
