--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
@@ -50,6 +52,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
